# globaltalk-scraper

./: .gitignore  README.md  gtmetrics.py  gtscraper.py  nodelist2jrouter.py  pyproject.toml
.github/: renovate.json
.github/workflows/: lint.yaml  release.yaml
visualisations/: d3.py  mermaid-mindmap-example.md  mermaid-mindmap.py
