[project]
name = "globaltalk-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew Williams",email = "andy@tensixtyone.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
